--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,13 +1,13 @@
-name: Check lint commit message
+name: Lint Commit Messages
+on: [pull_request]
 
-on: [pull_request, push]
+permissions:
+  contents: read
+  pull-requests: read
 
-jobs: 
+jobs:
   commitlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - uses: wagoid/commitlint-github-actions@v5
+      - uses: wagoid/commitlint-github-action@v6
