--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,13 +1,13 @@
-name: Lint Commit Messages
-on: [pull_request]
+name: Check lint commit message
 
-permissions:
-  contents: read
-  pull-requests: read
+on: [pull_request, push]
 
-jobs:
+jobs: 
   commitlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: wagoid/commitlint-github-action@v6
