--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hikma-datepicker",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -24,6 +24,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "build:css": "postcss src/index.css -o dist/index.css",
     "prepare": "husky",
+    "semantic-release": "semantic-release",
     "test": "echo 'No tests specified'"
   },
   "keywords": [],
@@ -47,7 +48,11 @@
     "@types/react-dom": "^18.3.1",
     "husky": "^9.1.6",
     "postcss-cli": "^11.0.0",
+    "semantic-release": "^24.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
