--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-      - run: npm ci
+      - run: npm install
       - run: npm run build
       - run: npm audit signatures
       - name: Release
