--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "clean": "rimraf dist",
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "build:css": "postcss src/index.css -o dist/index.css",
-    "prepare": "husky",
+    "husky": "husky",
     "semantic-release": "semantic-release",
+    "build:prod": "npm run clean && npm run build && npm run build:css",
     "test": "echo 'No tests specified'"
   },
   "keywords": [],
